@@ -293,7 +293,7 @@ Object scheme::assertionViolationEx(VM* theVM, int argc, const Object* argv)
     argumentCheckString(1, message);
 
     Object irritants = Object::Nil;
-    for (int i = 2; i < argc; i++) {
+    for (int i = argc - 1; i >= 2; i--) {
         irritants = Object::cons(argv[i], irritants);
     }
     callAssertionViolationAfter(theVM, who, message, irritants);
